modules/network.tf
# Add internet gateway
resource "aws_internet_gateway" "public-igw" {
    vpc_id = "${aws_vpc.my-vpc.id}"
    tags = {
        Name = "public-igw"
    }
}

# Public routes
resource "aws_route_table" "public-route-table" {
    vpc_id = "${aws_vpc.my-vpc.id}"

    route {
        cidr_block = "0.0.0.0/0" 
        gateway_id = "${aws_internet_gateway.public-igw.id}" 
    }

    tags = {
        Name = "public-route-table"
    }
}
resource "aws_route_table_association" "public-subnet-associate"{
    subnet_id = "${aws_subnet.public-subnet.id}"
    route_table_id = "${aws_route_table.public-route-table.id}"
}

# Security Group for App layer
resource "aws_security_group" "wp-sg" {
    vpc_id = "${aws_vpc.my-vpc.id}"

    egress {
        from_port = 0
        to_port = 0
        protocol = -1
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        // Do not use this in production, should be limited to your own IP
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
        Name = "ssh-allowed"
    }
}
